--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/LinkBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/LinkBlockTableViewCell.xib
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LinkBlockTableViewCell" rowHeight="69" id="KGk-i7-Jjw" customClass="LinkBlockTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LinkBlockTableViewCell" rowHeight="73" id="KGk-i7-Jjw" customClass="LinkBlockTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -25,7 +24,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mE-iO-IL7">
-                                <rect key="frame" x="68" y="39" width="244" height="21"/>
+                                <rect key="frame" x="68" y="35" width="244" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Fx2-Rx-3ik"/>
                                 </constraints>
@@ -34,46 +33,42 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ra4-P8-pN7">
-                                <rect key="frame" x="68" y="8" width="244" height="21"/>
+                                <rect key="frame" x="68" y="12" width="244" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMs-iS-weg">
+                                <rect key="frame" x="0.0" y="-1" width="320" height="71"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="linkClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="OVd-N3-xB0"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="0mE-iO-IL7" secondAttribute="leading" id="4A3-P4-L5a"/>
-                            <constraint firstItem="ra4-P8-pN7" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="8" id="Cem-Tr-XNb"/>
+                            <constraint firstItem="ra4-P8-pN7" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="12" id="Cem-Tr-XNb"/>
                             <constraint firstAttribute="trailing" secondItem="ra4-P8-pN7" secondAttribute="trailing" constant="8" id="NRg-fv-vsO"/>
                             <constraint firstItem="sQI-f1-ya2" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="8" id="ZAG-en-3vM"/>
                             <constraint firstItem="sQI-f1-ya2" firstAttribute="leading" secondItem="oTR-s9-34N" secondAttribute="leading" constant="8" id="imc-s3-wme"/>
                             <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="8" id="j2W-aj-fOC"/>
-                            <constraint firstItem="0mE-iO-IL7" firstAttribute="top" secondItem="ra4-P8-pN7" secondAttribute="bottom" constant="10" id="khq-i9-qXw"/>
+                            <constraint firstItem="0mE-iO-IL7" firstAttribute="top" secondItem="ra4-P8-pN7" secondAttribute="bottom" constant="2" id="khq-i9-qXw"/>
                             <constraint firstItem="ra4-P8-pN7" firstAttribute="width" secondItem="0mE-iO-IL7" secondAttribute="width" id="pKn-Ah-xpy"/>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="68" id="q2l-eO-9Kt"/>
-                            <constraint firstAttribute="bottom" secondItem="0mE-iO-IL7" secondAttribute="bottom" constant="8" id="wZR-G0-CUB"/>
+                            <constraint firstAttribute="bottom" secondItem="0mE-iO-IL7" secondAttribute="bottom" constant="12" id="wZR-G0-CUB"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMs-iS-weg">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="71"/>
-                        <state key="normal">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="linkClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="OVd-N3-xB0"/>
-                        </connections>
-                    </button>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="oTR-s9-34N" secondAttribute="bottom" constant="3" id="4Tw-kp-o1z"/>
+                    <constraint firstAttribute="bottom" secondItem="oTR-s9-34N" secondAttribute="bottom" constant="6" id="4Tw-kp-o1z"/>
                     <constraint firstItem="oTR-s9-34N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="AWK-10-juO"/>
                     <constraint firstAttribute="trailing" secondItem="oTR-s9-34N" secondAttribute="trailing" id="Kkv-96-Rpp"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="dMs-iS-weg" secondAttribute="trailing" constant="-8" id="VIp-AV-0jc"/>
                     <constraint firstItem="oTR-s9-34N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cjX-I8-OZE"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="dMs-iS-weg" secondAttribute="bottom" constant="-8" id="kEx-J4-2T2"/>
-                    <constraint firstItem="dMs-iS-weg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-8" id="tiK-3J-3Cd"/>
-                    <constraint firstItem="dMs-iS-weg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="wkv-uq-iCZ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -82,7 +77,7 @@
                 <outlet property="titleLabel" destination="ra4-P8-pN7" id="iVY-TK-BKH"/>
                 <outlet property="viewForBackgroundColor" destination="oTR-s9-34N" id="xg5-Qm-WnH"/>
             </connections>
-            <point key="canvasLocation" x="410" y="482"/>
+            <point key="canvasLocation" x="410" y="487.5"/>
         </tableViewCell>
     </objects>
 </document>
