--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/AudioBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlocks/Blocks/AudioBlockTableViewCell.xib
@@ -3,92 +3,134 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="AudioBlockTableViewCell" rowHeight="310" id="KGk-i7-Jjw" customClass="AudioBlockTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="318" height="115"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="AudioBlockTableViewCell" rowHeight="269" id="KGk-i7-Jjw" customClass="AudioBlockTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="318" height="74"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gold" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v0p-ky-YSc">
-                        <rect key="frame" x="8" y="7" width="38" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chet Faker" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NkC-Ma-2oK">
-                        <rect key="frame" x="8" y="35" width="196" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bNb-P6-22z" customClass="XMMMusicPlayer">
-                        <rect key="frame" x="212" y="8" width="98" height="98"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xcQ-PM-FgJ">
+                        <rect key="frame" x="0.0" y="0.0" width="318" height="67"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bNb-P6-22z" customClass="XMMMusicPlayer">
+                                <rect key="frame" x="0.0" y="55" width="318" height="12"/>
+                                <color key="backgroundColor" red="0.98594086489999999" green="1" blue="0.2994289685" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="12" id="3Sc-T6-vxn"/>
+                                    <constraint firstAttribute="height" constant="29" id="Joo-s8-9mV"/>
+                                    <constraint firstAttribute="height" constant="53" id="Ue9-RP-j0J"/>
+                                    <constraint firstAttribute="width" constant="318" id="XHn-zj-hU3"/>
+                                    <constraint firstAttribute="width" secondItem="bNb-P6-22z" secondAttribute="height" multiplier="1:1" id="iUA-P4-FkO"/>
+                                    <constraint firstAttribute="width" constant="53" id="kRA-Lv-lop"/>
+                                    <constraint firstAttribute="width" secondItem="bNb-P6-22z" secondAttribute="height" multiplier="1:1" id="tZL-F3-ktN"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="ringProgress">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="ringLineWidth">
+                                        <integer key="value" value="17"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="backgroundRingColor">
+                                        <color key="value" red="0.75868055555555558" green="0.75868055555555558" blue="0.75868055555555558" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="foregroundRingColor">
+                                        <color key="value" red="0.35149568135567999" green="0.76676925505050508" blue="0.14529067675954899" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Joo-s8-9mV"/>
+                                        <exclude reference="Ue9-RP-j0J"/>
+                                        <exclude reference="XHn-zj-hU3"/>
+                                        <exclude reference="iUA-P4-FkO"/>
+                                        <exclude reference="kRA-Lv-lop"/>
+                                        <exclude reference="tZL-F3-ktN"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="spc-5G-TLl">
+                                <rect key="frame" x="8" y="16" width="34" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="34" id="OqW-Pp-BZl"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="34" id="Q74-ZM-rW9"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="24" id="Uxg-3P-qO2"/>
+                                    <constraint firstAttribute="height" constant="24" id="kTT-lM-OMa"/>
+                                </constraints>
+                                <state key="normal" image="playbutton">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="playButtonTouched:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4xC-Rf-QCJ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gold" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v0p-ky-YSc">
+                                <rect key="frame" x="50" y="8" width="247" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chet Faker" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NkC-Ma-2oK">
+                                <rect key="frame" x="50" y="29" width="205" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s6P-Os-E9n">
+                                <rect key="frame" x="276" y="29" width="34" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="34" id="Bn4-Dm-iuq"/>
+                                    <constraint firstAttribute="height" constant="21" id="JHA-qb-sv1"/>
+                                    <constraint firstAttribute="width" constant="34" id="d4s-vi-yAS"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="wEA-qQ-xvc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="98" id="Joo-s8-9mV"/>
-                            <constraint firstAttribute="height" constant="53" id="Ue9-RP-j0J"/>
-                            <constraint firstAttribute="width" constant="98" id="XHn-zj-hU3"/>
-                            <constraint firstAttribute="width" secondItem="bNb-P6-22z" secondAttribute="height" multiplier="1:1" id="iUA-P4-FkO"/>
-                            <constraint firstAttribute="width" constant="53" id="kRA-Lv-lop"/>
-                            <constraint firstAttribute="width" secondItem="bNb-P6-22z" secondAttribute="height" multiplier="1:1" id="tZL-F3-ktN"/>
+                            <constraint firstItem="bNb-P6-22z" firstAttribute="top" secondItem="s6P-Os-E9n" secondAttribute="bottom" constant="5" id="91C-ty-1OX"/>
+                            <constraint firstItem="NkC-Ma-2oK" firstAttribute="top" secondItem="v0p-ky-YSc" secondAttribute="bottom" id="GFI-oM-DNu"/>
+                            <constraint firstItem="v0p-ky-YSc" firstAttribute="leading" secondItem="spc-5G-TLl" secondAttribute="trailing" constant="8" id="K1E-6h-fMo"/>
+                            <constraint firstAttribute="bottom" secondItem="bNb-P6-22z" secondAttribute="bottom" id="LIs-p9-eSZ"/>
+                            <constraint firstAttribute="trailing" secondItem="bNb-P6-22z" secondAttribute="trailing" id="Nky-88-qwS"/>
+                            <constraint firstItem="spc-5G-TLl" firstAttribute="leading" secondItem="xcQ-PM-FgJ" secondAttribute="leading" constant="8" id="Y0f-hr-lpp"/>
+                            <constraint firstItem="spc-5G-TLl" firstAttribute="top" secondItem="xcQ-PM-FgJ" secondAttribute="top" constant="16" id="a3n-52-pRS"/>
+                            <constraint firstItem="bNb-P6-22z" firstAttribute="top" secondItem="spc-5G-TLl" secondAttribute="bottom" constant="15" id="ikE-Ce-pny"/>
+                            <constraint firstAttribute="trailing" secondItem="v0p-ky-YSc" secondAttribute="trailing" constant="21" id="jEG-Q3-oph"/>
+                            <constraint firstItem="bNb-P6-22z" firstAttribute="leading" secondItem="xcQ-PM-FgJ" secondAttribute="leading" id="lwk-DB-VnP"/>
+                            <constraint firstAttribute="trailing" secondItem="s6P-Os-E9n" secondAttribute="trailing" constant="8" id="n1F-by-B1j"/>
+                            <constraint firstItem="v0p-ky-YSc" firstAttribute="top" secondItem="spc-5G-TLl" secondAttribute="top" constant="-8" id="tRM-oZ-doT"/>
+                            <constraint firstItem="s6P-Os-E9n" firstAttribute="leading" secondItem="NkC-Ma-2oK" secondAttribute="trailing" constant="21" id="uDF-dY-IQl"/>
+                            <constraint firstItem="v0p-ky-YSc" firstAttribute="leading" secondItem="NkC-Ma-2oK" secondAttribute="leading" id="vCY-jf-pDo"/>
                         </constraints>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="ringProgress">
-                                <real key="value" value="0.77000000000000002"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="ringLineWidth">
-                                <integer key="value" value="8"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="color" keyPath="backgroundRingColor">
-                                <color key="value" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="color" keyPath="foregroundRingColor">
-                                <color key="value" red="0.35149568135567999" green="0.76676925505050508" blue="0.14529067675954899" alpha="1" colorSpace="calibratedRGB"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Ue9-RP-j0J"/>
-                                <exclude reference="iUA-P4-FkO"/>
-                                <exclude reference="kRA-Lv-lop"/>
-                                <exclude reference="tZL-F3-ktN"/>
-                            </mask>
-                        </variation>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="bNb-P6-22z" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="E5b-eZ-Fee"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="bNb-P6-22z" secondAttribute="bottom" id="SVn-Q7-dbS"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="NkC-Ma-2oK" secondAttribute="bottom" constant="7" id="TCV-oA-Yqi"/>
-                    <constraint firstItem="v0p-ky-YSc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="X1P-d0-MYa"/>
-                    <constraint firstItem="v0p-ky-YSc" firstAttribute="trailing" secondItem="NkC-Ma-2oK" secondAttribute="trailing" id="aGT-fB-pmK"/>
-                    <constraint firstItem="bNb-P6-22z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="aW9-5S-LDa"/>
-                    <constraint firstItem="bNb-P6-22z" firstAttribute="leading" relation="lessThanOrEqual" secondItem="v0p-ky-YSc" secondAttribute="trailing" constant="166" id="aj6-ZA-25m"/>
-                    <constraint firstItem="v0p-ky-YSc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-1" id="buK-xD-T9W"/>
-                    <constraint firstItem="NkC-Ma-2oK" firstAttribute="top" secondItem="v0p-ky-YSc" secondAttribute="bottom" constant="7" id="qja-w3-5lJ"/>
-                    <constraint firstItem="NkC-Ma-2oK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="tNr-7D-Ap7"/>
-                    <constraint firstItem="bNb-P6-22z" firstAttribute="leading" relation="lessThanOrEqual" secondItem="NkC-Ma-2oK" secondAttribute="trailing" constant="8" id="ugG-Da-ND0"/>
+                    <constraint firstAttribute="bottom" secondItem="xcQ-PM-FgJ" secondAttribute="bottom" constant="6" id="5nQ-TT-PuV"/>
+                    <constraint firstItem="xcQ-PM-FgJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="7PJ-GD-xaP"/>
+                    <constraint firstItem="xcQ-PM-FgJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="VIM-Rd-Xhe"/>
+                    <constraint firstAttribute="trailing" secondItem="xcQ-PM-FgJ" secondAttribute="trailing" id="f4i-GM-Ls2"/>
                 </constraints>
-                <variation key="default">
-                    <mask key="constraints">
-                        <exclude reference="aGT-fB-pmK"/>
-                        <exclude reference="TCV-oA-Yqi"/>
-                    </mask>
-                </variation>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="1" green="1" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="artistLabel" destination="NkC-Ma-2oK" id="vSb-JY-RQn"/>
+                <outlet property="audioControlButton" destination="spc-5G-TLl" id="z7e-wx-rBi"/>
                 <outlet property="audioPlayerControl" destination="bNb-P6-22z" id="Sqw-Jc-F6e"/>
+                <outlet property="remainingTimeLabel" destination="s6P-Os-E9n" id="5tz-Fw-6ng"/>
                 <outlet property="titleLabel" destination="v0p-ky-YSc" id="hqh-74-Zo5"/>
             </connections>
-            <point key="canvasLocation" x="659" y="382.5"/>
+            <point key="canvasLocation" x="659" y="362"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="playbutton" width="20" height="24"/>
+    </resources>
 </document>
